objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Project_Lead_2__c</fullName>
        <label>Project Lead 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alisa Regnier</fullName>
                    <isActive>false</isActive>
                    <label>Alisa Regnier</label>
                </value>
                <value>
                    <fullName>Alison Pappas</fullName>
                    <isActive>false</isActive>
                    <label>Alison Pappas</label>
                </value>
                <value>
                    <fullName>Amanda Wesley</fullName>
                </value>
                <value>
                    <fullName>Brady Sadler</fullName>
                    <isActive>false</isActive>
                    <label>Brady Sadler</label>
                </value>
                <value>
                    <fullName>Debra Richardson</fullName>
                    <isActive>false</isActive>
                    <label>Debra Richardson</label>
                </value>
                <value>
                    <fullName>Jane Delson</fullName>
                    <isActive>false</isActive>
                    <label>Jane Delson</label>
                </value>
                <value>
                    <fullName>Kacy Kish</fullName>
                    <isActive>false</isActive>
                    <label>Kacy Kish</label>
                </value>
                <value>
                    <fullName>Karen Kermet</fullName>
                    <isActive>false</isActive>
                    <label>Karen Kermet</label>
                </value>
                <value>
                    <fullName>Laura Nelson</fullName>
                    <isActive>false</isActive>
                    <label>Laura Nelson</label>
                </value>
                <value>
                    <fullName>Letty Fong</fullName>
                    <isActive>false</isActive>
                    <label>Letty Fong</label>
                </value>
                <value>
                    <fullName>Lisa Bellis</fullName>
                </value>
                <value>
                    <fullName>Mary Menke</fullName>
                    <isActive>false</isActive>
                    <label>Mary Menke</label>
                </value>
                <value>
                    <fullName>Mary Ramirez</fullName>
                    <isActive>false</isActive>
                    <label>Mary Ramirez</label>
                </value>
                <value>
                    <fullName>Megan Esau</fullName>
                    <label>Megan Tuffey</label>
                </value>
                <value>
                    <fullName>Michelle Hylton</fullName>
                </value>
                <value>
                    <fullName>Michelle Leight</fullName>
                    <isActive>false</isActive>
                    <label>Michelle Leight</label>
                </value>
                <value>
                    <fullName>Richard Russo</fullName>
                    <isActive>false</isActive>
                    <label>Richard Russo</label>
                </value>
                <value>
                    <fullName>Ronald Stranix</fullName>
                </value>
                <value>
                    <fullName>Sonja Lyons</fullName>
                    <isActive>false</isActive>
                    <label>Sonja Lyons</label>
                </value>
                <value>
                    <fullName>Stephanie Hill</fullName>
                    <isActive>false</isActive>
                    <label>Stephanie Hill</label>
                </value>
                <value>
                    <fullName>Taylor Nickerson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Lead_3__c</fullName>
        <label>Project Lead 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alisa Regnier</fullName>
                    <isActive>false</isActive>
                    <label>Alisa Regnier</label>
                </value>
                <value>
                    <fullName>Alison Pappas</fullName>
                    <isActive>false</isActive>
                    <label>Alison Pappas</label>
                </value>
                <value>
                    <fullName>Amanda Wesley</fullName>
                </value>
                <value>
                    <fullName>Brady Sadler</fullName>
                    <isActive>false</isActive>
                    <label>Brady Sadler</label>
                </value>
                <value>
                    <fullName>Debra Richardson</fullName>
                    <isActive>false</isActive>
                    <label>Debra Richardson</label>
                </value>
                <value>
                    <fullName>Jane Delson</fullName>
                    <isActive>false</isActive>
                    <label>Jane Delson</label>
                </value>
                <value>
                    <fullName>Kacy Kish</fullName>
                    <isActive>false</isActive>
                    <label>Kacy Kish</label>
                </value>
                <value>
                    <fullName>Karen Kermet</fullName>
                    <isActive>false</isActive>
                    <label>Karen Kermet</label>
                </value>
                <value>
                    <fullName>Laura Nelson</fullName>
                    <isActive>false</isActive>
                    <label>Laura Nelson</label>
                </value>
                <value>
                    <fullName>Letty Fong</fullName>
                    <isActive>false</isActive>
                    <label>Letty Fong</label>
                </value>
                <value>
                    <fullName>Lisa Bellis</fullName>
                </value>
                <value>
                    <fullName>Mary Menke</fullName>
                    <isActive>false</isActive>
                    <label>Mary Menke</label>
                </value>
                <value>
                    <fullName>Mary Ramirez</fullName>
                    <isActive>false</isActive>
                    <label>Mary Ramirez</label>
                </value>
                <value>
                    <fullName>Megan Esau</fullName>
                    <label>Megan Tuffey</label>
                </value>
                <value>
                    <fullName>Michelle Hylton</fullName>
                </value>
                <value>
                    <fullName>Michelle Leight</fullName>
                    <isActive>false</isActive>
                    <label>Michelle Leight</label>
                </value>
                <value>
                    <fullName>Richard Russo</fullName>
                    <isActive>false</isActive>
                    <label>Richard Russo</label>
                </value>
                <value>
                    <fullName>Ronald Stranix</fullName>
                </value>
                <value>
                    <fullName>Sonja Lyons</fullName>
                    <isActive>false</isActive>
                    <label>Sonja Lyons</label>
                </value>
                <value>
                    <fullName>Stephanie Hill</fullName>
                    <isActive>false</isActive>
                    <label>Stephanie Hill</label>
                </value>
                <value>
                    <fullName>Taylor Nickerson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type_1__c</fullName>
        <label>Project Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI RFP Support</fullName>
                </value>
                <value>
                    <fullName>Custom Proposal</fullName>
                </value>
                <value>
                    <fullName>DirectSnap</fullName>
                </value>
                <value>
                    <fullName>Global RFI</fullName>
                </value>
                <value>
                    <fullName>Global RFP</fullName>
                </value>
                <value>
                    <fullName>Global RFP-Rebid</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFI-Rebid</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFP/Proposal Clarifications</fullName>
                </value>
                <value>
                    <fullName>RFP-Rebid</fullName>
                </value>
                <value>
                    <fullName>Vendor Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Country Support</fullName>
                    <isActive>false</isActive>
                    <label>Country Support</label>
                </value>
                <value>
                    <fullName>Executive Summary</fullName>
                    <isActive>false</isActive>
                    <label>Executive Summary</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Post RFP Follow Up</fullName>
                    <isActive>false</isActive>
                    <label>Post RFP Follow Up</label>
                </value>
                <value>
                    <fullName>Proposal Clarifications</fullName>
                    <isActive>false</isActive>
                    <label>Proposal Clarifications</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type_2__c</fullName>
        <label>Project Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI RFP Support</fullName>
                </value>
                <value>
                    <fullName>Custom Proposal</fullName>
                </value>
                <value>
                    <fullName>DirectSnap</fullName>
                </value>
                <value>
                    <fullName>Global RFI</fullName>
                </value>
                <value>
                    <fullName>Global RFP</fullName>
                </value>
                <value>
                    <fullName>Global RFP-Rebid</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFI-Rebid</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFP/Proposal Clarifications</fullName>
                </value>
                <value>
                    <fullName>RFP-Rebid</fullName>
                </value>
                <value>
                    <fullName>Vendor Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Country Support</fullName>
                    <isActive>false</isActive>
                    <label>Country Support</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Post RFP Follow Up</fullName>
                    <isActive>false</isActive>
                    <label>Post RFP Follow Up</label>
                </value>
                <value>
                    <fullName>Proposal Clarifications</fullName>
                    <isActive>false</isActive>
                    <label>Proposal Clarifications</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type_3__c</fullName>
        <label>Project Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI RFP Support</fullName>
                </value>
                <value>
                    <fullName>Custom Proposal</fullName>
                </value>
                <value>
                    <fullName>DirectSnap</fullName>
                </value>
                <value>
                    <fullName>Global RFI</fullName>
                </value>
                <value>
                    <fullName>Global RFP</fullName>
                </value>
                <value>
                    <fullName>Global RFP-Rebid</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFI-Rebid</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>RFP/Proposal Clarifications</fullName>
                </value>
                <value>
                    <fullName>RFP-Rebid</fullName>
                </value>
                <value>
                    <fullName>Vendor Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Country Support</fullName>
                    <isActive>false</isActive>
                    <label>Country Support</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Post RFP Follow Up</fullName>
                    <isActive>false</isActive>
                    <label>Post RFP Follow Up</label>
                </value>
                <value>
                    <fullName>Proposal Clarifications</fullName>
                    <isActive>false</isActive>
                    <label>Proposal Clarifications</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_LEGACY_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Upsell__c</fullName>
        <label>Type of Upsell</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Feeds – HR/OBT</fullName>
                </value>
                <value>
                    <fullName>3rd Party Feeds - Other</fullName>
                </value>
                <value>
                    <fullName>Additional OBT Site(s)</fullName>
                </value>
                <value>
                    <fullName>AI Chat - Product Support</fullName>
                </value>
                <value>
                    <fullName>AI Chat - Reservations</fullName>
                </value>
                <value>
                    <fullName>Approval – OBT or CETAS</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>CIBT Visa</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                </value>
                <value>
                    <fullName>Consulting - Airline Program Evaluation and Sourcing</fullName>
                </value>
                <value>
                    <fullName>Consulting - Corporate Card Program Sourcing and Mgmt</fullName>
                    <label>Consulting - Corporate Card program Sourcing and Mgmt</label>
                </value>
                <value>
                    <fullName>Consulting - Expense Optimization - Expense Technology Audit</fullName>
                </value>
                <value>
                    <fullName>Consulting - Expense Optimization - Outsourced Program Mgmt</fullName>
                </value>
                <value>
                    <fullName>Consulting - Ground - Car Rental Sourcing</fullName>
                </value>
                <value>
                    <fullName>Consulting - Ground - Limo/ Black Car Sourcing</fullName>
                </value>
                <value>
                    <fullName>Consulting - Hotel Sourcing - Full Service</fullName>
                </value>
                <value>
                    <fullName>Consulting - Hotel Sourcing - Self Service Sourcing Tech Only</fullName>
                </value>
                <value>
                    <fullName>Consulting - Sustainability</fullName>
                </value>
                <value>
                    <fullName>Consulting - Travel Policy Review</fullName>
                </value>
                <value>
                    <fullName>Consulting - Travel Survey</fullName>
                </value>
                <value>
                    <fullName>Credit Card Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Custom Reporting</fullName>
                </value>
                <value>
                    <fullName>Dinova</fullName>
                </value>
                <value>
                    <fullName>Direct ATPI Halo</fullName>
                </value>
                <value>
                    <fullName>Direct Intelligence</fullName>
                </value>
                <value>
                    <fullName>Direct Messaging</fullName>
                </value>
                <value>
                    <fullName>Direct Result (Prime)</fullName>
                </value>
                <value>
                    <fullName>Duty of Care - Crisis24/GardaWorld - Admin Add-on</fullName>
                </value>
                <value>
                    <fullName>Duty of Care - Crisis24/GardaWorld - Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>U_S_Air_Volume__c</fullName>
        <label>U.S. Air Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APAC_Air_Volume__c</fullName>
        <inlineHelpText>What is the total regional air volume</inlineHelpText>
        <label>APAC Air Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ATPI_Air_Volume__c</fullName>
        <label>ATPI Air Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CB_Client_Goals__c</fullName>
        <inlineHelpText>What are the client&apos;s key goals and drivers</inlineHelpText>
        <label>CB Client Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_Proposed_OBT__c</fullName>
        <inlineHelpText>Proposed OBT if different from current</inlineHelpText>
        <label>CB Proposed OBT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPY_Close_Date__c</fullName>
        <formula>CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COPY Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMEA_Air_Volume__c</fullName>
        <inlineHelpText>What is the total regional air volume</inlineHelpText>
        <label>EMEA Air Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Client__c</fullName>
        <label>Existing Client</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI</fullName>
                </value>
                <value>
                    <fullName>Direct Travel</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                    <isActive>false</isActive>
                    <label>Vision</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Commit__c</fullName>
        <label>Forecast Commit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Health__c</fullName>
        <description>Custom picklist indicating health of an opportunity, visible to all but editable by permssion set members</description>
        <label>Forecast Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMC_s_Competing__c</fullName>
        <inlineHelpText>Who are we competing against?</inlineHelpText>
        <label>TMC&apos;s Competing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>Abbey Travel</fullName>
                </value>
                <value>
                    <fullName>Able Travel</fullName>
                </value>
                <value>
                    <fullName>Account will not disclose</fullName>
                </value>
                <value>
                    <fullName>Action Travel</fullName>
                </value>
                <value>
                    <fullName>Adelman Travel</fullName>
                </value>
                <value>
                    <fullName>ADTRAV</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>American Express Global Travel</fullName>
                </value>
                <value>
                    <fullName>AmTrav</fullName>
                </value>
                <value>
                    <fullName>Ascendas</fullName>
                </value>
                <value>
                    <fullName>Atlas_Travel</fullName>
                    <label>Atlas Travel</label>
                </value>
                <value>
                    <fullName>Axiom</fullName>
                </value>
                <value>
                    <fullName>Balboa Travel</fullName>
                </value>
                <value>
                    <fullName>BCD - Affiliate</fullName>
                </value>
                <value>
                    <fullName>BCD - Corporate</fullName>
                </value>
                <value>
                    <fullName>BCD - World Travel Partners</fullName>
                </value>
                <value>
                    <fullName>Blue Ribbon (AX Affiliate)</fullName>
                </value>
                <value>
                    <fullName>BTI</fullName>
                </value>
                <value>
                    <fullName>Cadence Travel</fullName>
                </value>
                <value>
                    <fullName>Cain Travel</fullName>
                </value>
                <value>
                    <fullName>Campbell</fullName>
                </value>
                <value>
                    <fullName>Carlson Wagonlit Travel</fullName>
                </value>
                <value>
                    <fullName>Carrousel</fullName>
                </value>
                <value>
                    <fullName>Casto Travel</fullName>
                </value>
                <value>
                    <fullName>Chima Travel</fullName>
                </value>
                <value>
                    <fullName>Christopherson</fullName>
                </value>
                <value>
                    <fullName>CI Azumano</fullName>
                </value>
                <value>
                    <fullName>Continental Travel</fullName>
                </value>
                <value>
                    <fullName>Corniche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Air_Spend__c</fullName>
        <label>Annual Air Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Car_Spend__c</fullName>
        <label>Annual Car Spend - NORAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPY_Create_Date__c</fullName>
        <description>CreatedDate is a DateTime field and not usable directly in validation rules.
By creating a formula field that extracts just the date portion, we can compare it to CloseDate, which is a Date field.
This ensures the validation rule works as expected.</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CreatedDate is a DateTime field and not usable directly in validation rules.
By creating a formula field that extracts just the date portion, we can compare it to CloseDate, which is a Date field.
This ensures the validation rule works as expected.</inlineHelpText>
        <label>COPY Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Engagement__c</fullName>
        <description>Event Picklist field in Marketing Section of Opportunities</description>
        <label>Event Engagement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BTN Innovate</fullName>
                </value>
                <value>
                    <fullName>Concur Fusion Convention</fullName>
                </value>
                <value>
                    <fullName>Concur Fusion Exchange</fullName>
                </value>
                <value>
                    <fullName>Concur Local Event</fullName>
                </value>
                <value>
                    <fullName>GBTA Canada</fullName>
                </value>
                <value>
                    <fullName>GBTA Convention Booth Visit</fullName>
                </value>
                <value>
                    <fullName>GBTA Convention Meeting</fullName>
                </value>
                <value>
                    <fullName>GBTA DT Party</fullName>
                </value>
                <value>
                    <fullName>GBTA Local Event</fullName>
                </value>
                <value>
                    <fullName>Omnia Event</fullName>
                </value>
                <value>
                    <fullName>Procurecon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LATAM_Air_Volume__c</fullName>
        <inlineHelpText>What is the total regional air volume</inlineHelpText>
        <label>LATAM Air Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meeting_Services__c</fullName>
        <label>Meeting Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual Meeting</fullName>
                </value>
                <value>
                    <fullName>Hybrid Meeting</fullName>
                </value>
                <value>
                    <fullName>Pharma Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting Sourcing</fullName>
                </value>
                <value>
                    <fullName>Meeting Planning</fullName>
                </value>
                <value>
                    <fullName>Meeting Registration</fullName>
                </value>
                <value>
                    <fullName>Meeting Air</fullName>
                </value>
                <value>
                    <fullName>Meeting Transportation</fullName>
                </value>
                <value>
                    <fullName>Meeting Sleeping Rooms</fullName>
                </value>
                <value>
                    <fullName>Meeting F&amp;B</fullName>
                </value>
                <value>
                    <fullName>Meeting Travel Staff</fullName>
                </value>
                <value>
                    <fullName>Meeting Entertainment</fullName>
                </value>
                <value>
                    <fullName>Meeting Marketing</fullName>
                </value>
                <value>
                    <fullName>Meeting Technology Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NORAM_Air_Volume__c</fullName>
        <inlineHelpText>What is the total regional air volume</inlineHelpText>
        <label>NORAM Air Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Up_Sell__c</fullName>
        <description>The amount of the Upsell</description>
        <inlineHelpText>Enter the revenue related to the Product or Service being upsold OR the existing annual air volume for renewal/rebids.</inlineHelpText>
        <label>Value of Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_International__c</fullName>
        <inlineHelpText>What percentage of the NORMA-based volume is outbound international?</inlineHelpText>
        <label>% of International</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Air_Volume_Global__c</fullName>
        <inlineHelpText>The total value of the bid – the combined value of all countries.</inlineHelpText>
        <label>Air Volume - Global</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Volume_US_CAN__c</fullName>
        <inlineHelpText>The amount that will be generated for your country only (US or Canada).</inlineHelpText>
        <label>Air Volume - US/CAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Amount__c</fullName>
        <inlineHelpText>Total anticipated &quot;upsell&quot; revenue for the calendar year.</inlineHelpText>
        <label>Annualized Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Automation_Toggle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to allow automations to bypass validation rules</description>
        <label>Automation Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Client_Culture__c</fullName>
        <inlineHelpText>Describe the client&apos;s culture</inlineHelpText>
        <label>CB Client Culture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_Number_of_VIPs__c</fullName>
        <label>CB Number of VIPs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Service_Issues__c</fullName>
        <inlineHelpText>Have they had any major service issues</inlineHelpText>
        <label>CB Service Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_Travel_Nuances__c</fullName>
        <inlineHelpText>Are there any travel nuances specific to the client’s industry? (E.g., special fares, government work, restrictions, billable/non-billable travel)</inlineHelpText>
        <label>CB Travel Nuances</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount__c</fullName>
        <description>This field has been as a part of GTM-6</description>
        <label>Calculated Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Year_Attend__c</fullName>
        <description>Year marketing event was attended</description>
        <label>Event Year Attended</label>
        <type>TextArea</type>
    </fields>
</CustomObject>